--- a/S12.04-Exercise-ResourceQualifiers/app/src/main/res/layout-land/activity_detail.xml
+++ b/S12.04-Exercise-ResourceQualifiers/app/src/main/res/layout-land/activity_detail.xml
@@ -15,7 +15,6 @@
      limitations under the License.
 -->
 
-
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   - This layout displays the complete details of a given day's weather, including the date, a    -
   - weather icon and description, the high and low temperature, the humidity, pressure, and the  -
@@ -32,7 +31,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
           - To efficiently re-use complete layouts, you can use the <include/> tags to embed     -
@@ -45,16 +44,16 @@
         <include
             android:id="@+id/primary_info"
             layout="@layout/primary_weather_info"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".55"/>
 
         <include
             android:id="@+id/extra_details"
             layout="@layout/extra_weather_details"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".45"/>
 
     </LinearLayout>
 </layout>
